package Utils;

public interface IDataStructure<T> {

    public boolean isEmpty();
    public int size();
    public void listData();
}